<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Welcome to \n Smart Gate"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_MemberLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="70dp"
        tools:ignore="MissingConstraints"
       />

    <Button
        android:id="@+id/btn_MemberLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_text"
        android:text="@string/btn_MemberLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_AdminLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_text"
        android:text="@string/btn_AdminLogin"
        app:layout_constraintTop_toBottomOf="@+id/btn_MemberLogin"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_SecurityLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_text"
        android:text="@string/btn_SecurityLogin"
        app:layout_constraintTop_toBottomOf="@+id/btn_AdminLogin"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>