<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="18dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_ComplaintTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/complaint_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/viewline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/txt_ComplaintTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="#F70000" />

        <TextView
            android:id="@+id/txt_ComplaintDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewline"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/complaint_description"
            android:text="@string/complaint_description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/viewline1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/txt_ComplaintDesc"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="#F70000" />

        <TextView
            android:id="@+id/txt_CompalintStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewline1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/complaint_status"
            android:text="@string/complaint_status"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>