<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="18dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_eventImg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="108dp"
            android:layout_height="108dp" />

        <TextView
            android:id="@+id/txt_EventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/img_eventImg"
            android:hint="@string/event_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/viewline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/txt_EventTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/img_eventImg"
            android:background="@color/black" />

        <TextView
            android:id="@+id/txt_EventBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewline"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_budget"
            android:layout_toRightOf="@+id/img_eventImg"
            android:hint="@string/event_budget"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_EventSDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_EventBudget"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/img_eventImg"
            android:hint="@string/event_sdate"
            android:textColor="@color/black"
            android:textSize="18sp" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>